# dots

./: Cargo.toml
config/: .zshrc
config/dunst/: dunstrc
config/eww/: eww.scss  eww.yuck
config/hypr/: hyprland.conf  hyprpaper.conf
config/kitty/: kitty.conf
config/neofetch/: config.conf
crates/sofia-dots/: Cargo.toml
crates/sofia-dots/src/: main.rs
crates/sofia-eww/: Cargo.toml
crates/sofia-eww/src/: battery.rs  main.rs  workspaces.rs
