[package]
name = "sofia-eww"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = "1.13.0"
clap = { version = "4.3.19", features = ["derive"] }
hyprland = "0.3.9"
notify-rust = "4.8.0"
smol = "1.3.0"
