[package]
name = "sofia-eww"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
derive = "1.0.0"
hyprland = "0.3.9"
notify-rust = "4.8.0"
tokio = { version = "1.29.1", features = ["rt", "io-std", "macros", "time"] }
